examples/bad/01-03-declaration_wrong_type.latf
int main() {
    int x = true; // error - wrong type
    return 0;
}